

# setup.cfg
[metadata]
name = fastapi-tusd
version= attr: fastapi_tusd.__version__
author = Frank
author_email = 1yue8haogaoqi@gmail.com
description= FastAPI extention implementing the tus server
long_description = file: README.md, LICENSE
keywords = fastapi_tusd
url = https://github.com/liviaerxin/fastapi_tusd
    license=MIT license
classifiers =
    License :: OSI Approved :: MIT License,
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find_namespace:
python_requires = >=3.7
package_dir =
    =src
zip_safe = False
install_requires =
    fastapi
    filelock

[options.packages.find]
where = src
exclude = tests*

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.extras_require]
test =
    pytest>=3
    pytest-cov
format =
    black