# setup.cfg
[metadata]
name = fastapi-tusd
version= attr: fastapi_tusd.__version__
author = Frank
author_email = 1yue8haogaoqi@gmail.com
description= FastAPI extention implementing the tus server
long_description = file: README.md, License
long_description_content_type = text/markdown
keywords = fastapi_tusd
url = https://github.com/liviaerxin/fastapi_tusd
license = MIT license
classifiers =
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries
    Topic :: Software Development
    Framework :: FastAPI
    Framework :: Pydantic
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP :: HTTP Servers
    Topic :: Internet :: WWW/HTTP

[options]
include_package_data = True
packages = find_namespace:
python_requires = >=3.7
package_dir =
    =src
zip_safe = False
install_requires =
    fastapi>=0.98
    filelock

[options.packages.find]
where = src
exclude = tests*

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.extras_require]
test =
    pytest>=3
    pytest-cov
format =
    black
dev =
    uvicorn